# fullstack-test-task

./: README.md
backend/: pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 953b0bbe0fa6_use_enums.py  fb2c09cc7f96_use_uuid.py
backend/src/: app.py  db.py  enums.py  models.py  schemas.py  service.py  tasks.py
